# pico_macropad

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c
include/: buttons.h  encoder.h  hid_keys.h  mapping.h  ssd1306.h  ws2812.h
src/: buttons.c  encoder.c  encoder.pio  hid_keys.c  ssd1306.c  ws2812.c  ws2812.pio
